more matlab functions

--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -1624,3 +1624,54 @@ Publisher: Nature Publishing Group},
 	urldate = {2021-01-21},
 	file = {Snapshot:/home/ali/Zotero/storage/XVF268NA/672305561121775.html:text/html}
 }
+
+@misc{noauthor_avedore_2020,
+	title = {Avedøre {Power} {Station}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Aved%C3%B8re_Power_Station&oldid=947315450},
+	abstract = {The Avedøre Power Station (Danish: Avedøreværket) is a combined heat and power station, located in Avedøre, Denmark, just south of Copenhagen, and is owned by Ørsted A/S. Avedøre Power Plant is a high-technology facility and one of the world's most efficient of its kind, being able to utilize as much as 94\% of the energy in the fuel and convert 49\% of the fuel energy into electricity. Apart from using coal, petroleum (oil) and natural gas, the plant runs on a wide variety of biomass fuels such as straw and wood pellets. The plant consists of two units with a total capacity of 793 MW of electricity and 918 MW of heat. The combination of producing electricity (combined heat and power) and heat for district heating at the same time is widely used in Denmark and the rest of Scandinavia, due to the need of domestic (and industrial) heating together with the Danish energy companies putting a big effort into optimising the energy plants.
+The Avedøre Power Station was designed by the architects Claus Bjarrum and Jørgen Hauxner.},
+	language = {en},
+	urldate = {2021-01-21},
+	journal = {Wikipedia},
+	month = mar,
+	year = {2020},
+	note = {Page Version ID: 947315450},
+	file = {Snapshot:/home/ali/Zotero/storage/E6DH2DGW/index.html:text/html}
+}
+
+@article{elnashaie_simulation_1988,
+	title = {Simulation and optimization of an industrial ammonia reactor},
+	volume = {27},
+	issn = {0888-5885},
+	url = {https://doi.org/10.1021/ie00083a010},
+	doi = {10.1021/ie00083a010},
+	number = {11},
+	urldate = {2021-01-26},
+	journal = {Industrial \& Engineering Chemistry Research},
+	author = {Elnashaie, Said S. and Abashar, Mohamed E. and Al-Ubaid, Abdulrahman S.},
+	month = nov,
+	year = {1988},
+	note = {Publisher: American Chemical Society},
+	pages = {2015--2022},
+	file = {ACS Full Text Snapshot:/home/ali/Zotero/storage/Q9TZZXQW/ie00083a010.html:text/html;Elnashaie et al_1988_Simulation and optimization of an industrial ammonia reactor.pdf:/home/ali/Dropbox/Zotero/Elnashaie et al_1988_Simulation and optimization of an industrial ammonia reactor.pdf:application/pdf}
+}
+
+@article{morud_analysis_1998,
+	title = {Analysis of instability in an industrial ammonia reactor},
+	volume = {44},
+	copyright = {Copyright © 1998 American Institute of Chemical Engineers (AIChE)},
+	issn = {1547-5905},
+	url = {https://aiche.onlinelibrary.wiley.com/doi/abs/10.1002/aic.690440414},
+	doi = {https://doi.org/10.1002/aic.690440414},
+	abstract = {The starting point for this study was an incident in an industrial plant, where the ammonia synthesis reactor became unstable with rapid temperature oscillations (limit-cycles) in the range from about 300°C to 500°C. A simple dynamic model reproduces this behavior. In industry a steady-state van Heerden analysis is often used to analyze the stability, but a more careful analysis for this reactor system reveals that instability occurs when there still is a positive steady-state margin, namely as a pair of complex conjugate poles cross the imaginary axis (Hopf bifurcation). This is consistent with the obseruations where the instability manifests itself as oscillations rather than extinction of the reaction. This somewhat unusual behavior can be explained by the presence of an inverse response for the temperature response through the reactor beds combined with the positive feedback caused by the preheater.},
+	language = {en},
+	number = {4},
+	urldate = {2021-01-26},
+	journal = {AIChE Journal},
+	author = {Morud, John C. and Skogestad, Sigurd},
+	year = {1998},
+	note = {\_eprint: https://aiche.onlinelibrary.wiley.com/doi/pdf/10.1002/aic.690440414},
+	pages = {888--895},
+	file = {Morud_Skogestad_1998_Analysis of instability in an industrial ammonia reactor.pdf:/home/ali/Dropbox/Zotero/Morud_Skogestad_1998_Analysis of instability in an industrial ammonia reactor.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/2L77X2LI/aic.html:text/html}
+}
