more for the report

--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -1617,9 +1617,9 @@ Publisher: Nature Publishing Group},
 }
 
 @misc{noauthor_orsted_nodate,
-	title = {Ørsted takes final investment decision on first renewable hydrogen project},
+	title = {Orsted takes final investment decision on first renewable hydrogen project},
 	url = {https://orsted.com/en/media/newsroom/news/2021/01/672305561121775},
-	abstract = {Ørsted has taken final investment decision on the Danish demonstration project H2RES, which will use offshore wind energy to produce renewable hydrogen. The project is expected to produce its first hydrogen in late 2021 and will be Ørsted's first renewable hydrogen project in operation.},
+	abstract = {Orsted has taken final investment decision on the Danish demonstration project H2RES, which will use offshore wind energy to produce renewable hydrogen. The project is expected to produce its first hydrogen in late 2021 and will be Orsted's first renewable hydrogen project in operation.},
 	language = {en},
 	urldate = {2021-01-21},
 	file = {Snapshot:/home/ali/Zotero/storage/XVF268NA/672305561121775.html:text/html}
