papers in latex

--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -503,7 +503,7 @@
 }
 
 @article{babic_critical_2017,
-	title = {Critical {Review}—{Identifying} {Critical} {Gaps} for {Polymer} {Electrolyte} {Water} {Electrolysis} {Development}},
+	title = {Critical {Review} - {Identifying} {Critical} {Gaps} for {Polymer} {Electrolyte} {Water} {Electrolysis} {Development}},
 	volume = {164},
 	issn = {1945-7111},
 	url = {https://iopscience.iop.org/article/10.1149/2.1441704jes/meta},
@@ -1674,4 +1674,257 @@ The Avedøre Power Station was designed by the architects Claus Bjarrum and Jør
 	note = {\_eprint: https://aiche.onlinelibrary.wiley.com/doi/pdf/10.1002/aic.690440414},
 	pages = {888--895},
 	file = {Morud_Skogestad_1998_Analysis of instability in an industrial ammonia reactor.pdf:/home/ali/Dropbox/Zotero/Morud_Skogestad_1998_Analysis of instability in an industrial ammonia reactor.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/2L77X2LI/aic.html:text/html}
+}
+
+@article{luyben_design_2010,
+	title = {Design and {Control} of a {Methanol} {Reactor}/{Column} {Process}},
+	volume = {49},
+	issn = {0888-5885},
+	url = {https://doi.org/10.1021/ie100323d},
+	doi = {10.1021/ie100323d},
+	abstract = {Methanol is one of the prime candidates for providing an alternative to petroleum-based liquid transportation fuels. It can be made from any renewable biomass hydrocarbon source by partial oxidation in an oxygen-blown gasifier to produce synthesis gas, which is then converted into methanol. The purpose of this paper is to develop the economically optimum design of a methanol reactor/distillation column system with three gas recycle streams to produce high-purity methanol from synthesis gas. The economics consider capital costs, energy costs, the value of the methanol product, and the heating value of a vent stream that is necessary for purging off inert components entering in the feed. A plantwide control structure is developed that is capable of effectively handling large disturbances in the production rate and synthesis gas composition. The unique features of this control scheme are a lack of control of pressure in the reactor/recycle gas loop and a high-pressure override controller to handle stoichiometric imbalances in the composition of the synthesis gas feed.},
+	number = {13},
+	urldate = {2021-01-26},
+	journal = {Industrial \& Engineering Chemistry Research},
+	author = {Luyben, William L.},
+	month = jul,
+	year = {2010},
+	note = {Publisher: American Chemical Society},
+	pages = {6150--6163},
+	file = {ACS Full Text Snapshot:/home/ali/Zotero/storage/P964YIL5/ie100323d.html:text/html;Luyben_2010_Design and Control of a Methanol Reactor-Column Process.pdf:/home/ali/Dropbox/Zotero/Luyben_2010_Design and Control of a Methanol Reactor-Column Process.pdf:application/pdf}
+}
+
+@article{chen_optimization_2011,
+	title = {Optimization of {Methanol} {Yield} from a {Lurgi} {Reactor}},
+	volume = {34},
+	copyright = {Copyright © 2011 WILEY‐VCH Verlag GmbH \& Co. KGaA, Weinheim},
+	issn = {1521-4125},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ceat.201000282},
+	doi = {https://doi.org/10.1002/ceat.201000282},
+	abstract = {Methanol is an important chemical with the potential to become an alternative fuel. An optimization study was performed for a Lurgi methanol synthesis reactor using the commercial process simulator Aspen Plus. The optimization routine is coupled with a steady-state model of the methanol synthesis reactor. Syngas inlet temperature, steam drum pressure, and cooling water volumetric flow rate were optimized so that methanol production in the reactor outlet was maximized. The methanol yield increased by 7.04 \%.},
+	language = {en},
+	number = {5},
+	urldate = {2021-01-26},
+	journal = {Chemical Engineering \& Technology},
+	author = {Chen, L. and Jiang, Q. and Song, Z. and Posarac, D.},
+	year = {2011},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ceat.201000282},
+	keywords = {Aspen Plus, Methanol synthesis, Optimization, Simulation},
+	pages = {817--822},
+	file = {Chen et al_2011_Optimization of Methanol Yield from a Lurgi Reactor.pdf:/home/ali/Dropbox/Zotero/Chen et al_2011_Optimization of Methanol Yield from a Lurgi Reactor.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/FUIYEMZQ/ceat.html:text/html}
+}
+
+@article{er-rbib_modelling_2013,
+	title = {Modelling and simulation of methanation catalytic reactor for renewable electricity storage},
+	journal = {Chemical engineering transactions},
+	author = {Er-rbib, Hanaâ and Bouallou, Chakib},
+	year = {2013},
+	file = {Er-rbib_Bouallou_2013_Modelling and simulation of methanation catalytic reactor for renewable.pdf:/home/ali/Dropbox/Zotero/Er-rbib_Bouallou_2013_Modelling and simulation of methanation catalytic reactor for renewable.pdf:application/pdf}
+}
+
+@article{ronsch_review_2016,
+	title = {Review on methanation – {From} fundamentals to current projects},
+	volume = {166},
+	issn = {0016-2361},
+	url = {http://www.sciencedirect.com/science/article/pii/S0016236115011254},
+	doi = {10.1016/j.fuel.2015.10.111},
+	abstract = {Methane production from syngas goes back to more than 100years of research and process development. Early developments (1970–1980) using syngas from coal gasification plants primarily focused on fixed-bed and fluidized-bed methanation technologies. Temperature control and catalyst deactivation, e.g. caused by fouling and mechanical stress, were key issues of investigation. Due to the debate about a sustainable energy supply, research on methanation has been intensified during the last ten years. Novel reactor developments comprise e.g. micro reactors and three-phase reactors aiming at an advanced temperature control and a reduced complexity of future methanation plants. The developments are supported by detailed modeling and simulation work to optimize the design and dynamic behavior. To accompany and facilitate new methanation developments, the present work is aimed at giving researchers a comprehensive overview of methanation research conducted during the last century. On one hand, application-orientated research focusing on reactor developments, reactor modeling, and pilot plant investigation is reviewed. On the other hand, fundamentals such as reaction mechanisms and catalyst deactivation are presented.},
+	language = {en},
+	urldate = {2021-01-26},
+	journal = {Fuel},
+	author = {Rönsch, Stefan and Schneider, Jens and Matthischke, Steffi and Schlüter, Michael and Götz, Manuel and Lefebvre, Jonathan and Prabhakaran, Praseeth and Bajohr, Siegfried},
+	month = feb,
+	year = {2016},
+	keywords = {Sabatier reaction, Reactor modeling, Biomass-to-gas, Catalytic methanation, Power-to-gas, Substitute Natural Gas (SNG)},
+	pages = {276--296},
+	file = {ScienceDirect Snapshot:/home/ali/Zotero/storage/7TPCN2QK/S0016236115011254.html:text/html}
+}
+
+@misc{noauthor_denmark_2020,
+	title = {Denmark to end new oil and gas exploration in {North} {Sea}},
+	url = {http://www.theguardian.com/business/2020/dec/04/denmark-to-end-new-oil-and-gas-exploration-in-north-sea},
+	abstract = {Decision as part of plan to phase out fossil fuel extraction by 2050 will put pressure on UK},
+	language = {en},
+	urldate = {2021-02-11},
+	journal = {the Guardian},
+	month = dec,
+	year = {2020},
+	note = {Section: Business},
+	file = {Snapshot:/home/ali/Zotero/storage/EP8X8YCT/denmark-to-end-new-oil-and-gas-exploration-in-north-sea.html:text/html}
+}
+
+@misc{noauthor_energy_2021,
+	title = {Energy islands of {Denmark}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Energy_islands_of_Denmark&oldid=1005490039},
+	abstract = {The government of Denmark is planning to establish two large-scale offshore wind farm projects or "energy islands", in the North Sea and the Baltic Sea respectively, by the year 2030. In the North Sea, an artificial island will be constructed with the capacity to serve as a hub for up to 3 GW of offshore wind farms initially, and potentially up to 10 GW in the future. The artificial island may take the form of a sand island, steel platforms, or a large container lowered into place and filled with stone material. In the Baltic Sea, a hub will be built on the natural island of Bornholm that will be able to serve up to 2 GW of offshore wind farms.},
+	language = {en},
+	urldate = {2021-02-11},
+	journal = {Wikipedia},
+	month = feb,
+	year = {2021},
+	note = {Page Version ID: 1005490039},
+	file = {Snapshot:/home/ali/Zotero/storage/XKS4XK4R/index.html:text/html}
+}
+
+@misc{noauthor_large-scale_nodate,
+	title = {Large-scale energy storage},
+	url = {/en/focus-areas/energy-transition/roadmaps/system-transition/towards-a-reliable-affordable-and-fair-energy-system/energy-conversion-and-storage/large-scale-energy-storage/},
+	abstract = {TNO leads joint-industry project on large-scale energy storage technologies to enable integration of renewables while maintaining security of supply.},
+	language = {en},
+	urldate = {2021-02-06},
+	journal = {TNO},
+	file = {Snapshot:/home/ali/Zotero/storage/S7BVRXCJ/large-scale-energy-storage.html:text/html}
+}
+
+@article{noauthor_project_nodate,
+	title = {Project {Hysecure} {Phase} 1 {Summary}},
+	language = {en},
+	pages = {25},
+	file = {Project Hysecure Phase 1 Summary.pdf:/home/ali/Zotero/storage/PJD4K335/Project Hysecure Phase 1 Summary.pdf:application/pdf}
+}
+
+@article{hulme_development_1979,
+	title = {Development of {Offshore} {GasTurbine} {Packages} for {PowerGeneration} and {Mechanical} {Drive}},
+	journal = {ASME},
+	author = {Hulme, B.G.},
+	year = {1979},
+	file = {Hulme_1979_Development of Offshore GasTurbine Packages for PowerGeneration and Mechanical.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Hulme_1979_Development of Offshore GasTurbine Packages for PowerGeneration and Mechanical.pdf:application/pdf}
+}
+
+@misc{mazzetti_offshore_nodate,
+	title = {Offshore {Energy} {Efficiency} {Technologies}},
+	url = {https://www.sintef.no/globalassets/project/effort/effort-presentation-at-the-otc-conference-houston-may-6-2013.pdf},
+	publisher = {SINTEF},
+	author = {Mazzetti, Marit}
+}
+
+@misc{noauthor_dan_2018,
+	title = {Dan {FG}},
+	url = {https://www.isc.dk/en/dan-fg/},
+	abstract = {The latest platform installed in the Dan field in the Danish North Sea is Dan FG. This platform increases the 300 bar water injection in the old Dan and Halfdan oil fields, thereby maintaining the pressure from the oil production.},
+	language = {dk},
+	urldate = {2021-01-31},
+	journal = {ISC Consulting Engineers A/S},
+	month = aug,
+	year = {2018},
+	file = {Snapshot:/home/ali/Zotero/storage/NFM8UB3S/dan-fg.html:text/html}
+}
+
+@article{mazzetti_offshore_nodate-1,
+	title = {Offshore {Energy} {Efficiency} {Technologies}},
+	language = {en},
+	journal = {Energy Efficiency},
+	author = {Mazzetti, Marit J},
+	pages = {23},
+	file = {Mazzetti - Offshore Energy Efficiency Technologies.pdf:/home/ali/Zotero/storage/TKY5XDE7/Mazzetti - Offshore Energy Efficiency Technologies.pdf:application/pdf}
+}
+
+@article{bell_pure_2014,
+	title = {Pure and pseudo-pure fluid thermophysical property evaluation and the open-source thermophysical property library {CoolProp}},
+	volume = {53},
+	number = {6},
+	journal = {Industrial \& engineering chemistry research},
+	author = {Bell, Ian H. and Wronski, Jorrit and Quoilin, Sylvain and Lemort, Vincent},
+	year = {2014},
+	note = {Publisher: ACS Publications},
+	pages = {2498--2508},
+	file = {Bell et al_2014_Pure and pseudo-pure fluid thermophysical property evaluation and the.pdf:/home/ali/Dropbox/Zotero/Bell et al_2014_Pure and pseudo-pure fluid thermophysical property evaluation and the.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/WYERIUIM/ie4033999.html:text/html}
+}
+
+@inproceedings{bell_coolprop_2013,
+	title = {Coolprop: {An} open-source reference-quality thermophysical property library},
+	shorttitle = {Coolprop},
+	booktitle = {{ASME} {ORC} 2nd {International} {Seminar} on {ORC} {Power} {Systems}},
+	author = {Bell, Ian H. and Quoilin, Sylvain and Wronski, Jorrit and Lemort, Vincent},
+	year = {2013}
+}
+
+@book{sankaranarayanan_efficiency_2010,
+	title = {Efficiency and sustainability in the energy and chemical industries: scientific principles and case studies},
+	shorttitle = {Efficiency and sustainability in the energy and chemical industries},
+	publisher = {Crc Press},
+	author = {Sankaranarayanan, Krishnan and de Swaan Arons, Jakob and Van der Kooi, Hedzer J.},
+	year = {2010},
+	file = {Snapshot:/home/ali/Zotero/storage/XWWVKIDH/books.html:text/html}
+}
+
+@misc{international_energy_agency_direct_nodate,
+	title = {Direct {Air} {Capture} - {Analysis}},
+	url = {https://www.iea.org/reports/direct-air-capture},
+	abstract = {Direct Air Capture - Analysis and key findings. A report by the International Energy Agency.},
+	language = {en-GB},
+	urldate = {2021-02-15},
+	journal = {IEA},
+	author = {International Energy Agency},
+	file = {Snapshot:/home/ali/Zotero/storage/NJPUKHVI/direct-air-capture.html:text/html}
+}
+
+@article{mcqueen_cost_2020,
+	title = {Cost {Analysis} of {Direct} {Air} {Capture} and {Sequestration} {Coupled} to {Low}-{Carbon} {Thermal} {Energy} in the {United} {States}},
+	volume = {54},
+	number = {12},
+	journal = {Environmental science \& technology},
+	author = {McQueen, Noah and Psarras, Peter and Pilorge, Helene and Liguori, Simona and He, Jiajun and Yuan, Mengyao and Woodall, Caleb M. and Kian, Kourosh and Pierpoint, Lara and Jurewicz, Jacob},
+	year = {2020},
+	note = {Publisher: ACS Publications},
+	pages = {7542--7551},
+	file = {Full Text:/home/ali/Zotero/storage/JLVDPD37/acs.est.html:text/html;Snapshot:/home/ali/Zotero/storage/EU42S3TT/acs.est.html:text/html}
+}
+
+@misc{noauthor_direct_2021,
+	title = {Direct {Air} {Capture}: {Resource} {Considerations} and {Costs} for {Carbon} {Removal}},
+	shorttitle = {Direct {Air} {Capture}},
+	url = {https://www.wri.org/blog/2021/01/direct-air-capture-definition-cost-considerations},
+	abstract = {Meeting climate goals will require carbon dioxide removal, likely at the billion-tonne scale by midcentury. Direct air capture (DAC) is gaining traction as a promising carbon removal approach, but will require careful consideration of energy, land and water use to inform siting and minimize resource impacts.},
+	language = {en},
+	urldate = {2021-02-15},
+	journal = {World Resources Institute},
+	month = jan,
+	year = {2021},
+	file = {Snapshot:/home/ali/Zotero/storage/BS4BWTWV/direct-air-capture-definition-cost-considerations.html:text/html}
+}
+
+@article{keith_why_2009,
+	title = {Why capture {CO2} from the atmosphere?},
+	volume = {325},
+	number = {5948},
+	journal = {Science},
+	author = {Keith, David W.},
+	year = {2009},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {1654--1655},
+	file = {Keith_2009_Why capture CO2 from the atmosphere.pdf:/home/ali/Dropbox/Zotero/Keith_2009_Why capture CO2 from the atmosphere.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/FJX4KNSX/1654.html:text/html}
+}
+
+@article{mahmoudkhani_low-energy_2009,
+	title = {Low-energy sodium hydroxide recovery for {CO2} capture from atmospheric air - {Thermodynamic} analysis},
+	volume = {3},
+	number = {4},
+	journal = {International Journal of Greenhouse Gas Control},
+	author = {Mahmoudkhani, Maryam and Keith, David W.},
+	year = {2009},
+	note = {Publisher: Elsevier},
+	pages = {376--384},
+	file = {Full Text:/home/ali/Zotero/storage/WH4PTZGH/S1750583609000176.html:text/html}
+}
+
+@article{eftekhari_exergy_2012,
+	title = {Exergy analysis of underground coal gasification with simultaneous storage of carbon dioxide},
+	volume = {45},
+	number = {1},
+	journal = {Energy},
+	author = {Eftekhari, Ali Akbar and Van Der Kooi, Hedzer and Bruining, Hans},
+	year = {2012},
+	note = {Publisher: Elsevier},
+	pages = {729--745},
+	file = {Eftekhari et al_2012_Exergy analysis of underground coal gasification with simultaneous storage of.pdf:/home/ali/Dropbox/Zotero/Eftekhari et al_2012_Exergy analysis of underground coal gasification with simultaneous storage of.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/G8NVU74M/S036054421200549X.html:text/html}
+}
+
+@book{eftekhari_fvtool_2015,
+	title = {{FVTool}: a finite volume toolbox for {Matlab}},
+	shorttitle = {{FVTool}},
+	author = {Eftekhari, A. A. and Schüller, K.},
+	year = {2015},
+	file = {Snapshot:/home/ali/Zotero/storage/28WEZABV/scholar.html:text/html}
 }
